--- a/src/main.scss
+++ b/src/main.scss
@@ -1,11 +1,12 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: #d2f0f8;
+  background-color: #def1f7;
 }
 
 body {
   margin: 0;
   padding: 0;
+  background: none;
 }
 
 .body-container {
